--- a/Product1.html
+++ b/Product1.html
@@ -7,7 +7,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="HTML.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="https://t.me/tuntola">Contact</a></li>
             </ul>
