--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="HTML.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="https://web.facebook.com/profile.php?id=100088518528010">Services</a></li>
                     <li><a href="https://web.facebook.com/profile.php?id=100088518528010">Contact</a></li>
