--- a/Product1.html
+++ b/Product1.html
@@ -17,7 +17,7 @@
 
 
 <section class="products">
-    <div class="container2">
+    <div class="container">
         <h2>Featured Products</h2>
         <div class="product-grid">
             <div class="product">
