--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>Discover Your Style</h2>
+            <h2>The Man Store</h2>
             <p>Explore our latest collection of high-quality clothing.</p>
             <a href="Product1.html" class="btn">Shop Now</a>
         </div>
