--- a/about.html
+++ b/about.html
@@ -7,22 +7,12 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <main>
         <section class="hero">           
             <div class="container">
                 <h1>Welcome to The Man Store</h1>
                 <p>We provide high-quality services to our clients.</p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="index.html" class="btn">Home</a>
             </div>
         </section>
 
