--- a/Product1.html
+++ b/Product1.html
@@ -18,31 +18,31 @@
 
 <section class="products">
     <div class="container">
-        <h2>Best Seller</h2>
+        <h2>Featured Products</h2>
         <div class="product-grid">
             <div class="product">
-                <img src="img/product1.jpg" alt="Product 1">
-                <h3>Shirt</h3>
+                <img src="img/photo_2025-03-09_16-54-22.jpg" alt="Product 1">
+                <h3>Shirt OverSize</h3>
                 <p>$9.99</p>
-                <a href="#" class="btn">Add to Cart</a>
+                <a href="cart.html" class="btn">Contact Me</a>
             </div>
             <div class="product">
-                <img src="img/2.jpg" alt="Product 2">
-                <h3>Shirt</h3>
+                <img src="img/photo_2025-03-09_16-51-23.jpg" alt="Product 2">
+                <h3>Shirt OverSize</h3>
                 <p>$9.99</p>
-                <a href="#" class="btn">Add to Cart</a>
+                <a href="https://t.me/tuntola" class="btn">Contact Me</a>
             </div>
             <div class="product">
-                 <img src="img/3.jpg" alt="Product 3">
-                <h3>Shirt</h3>
+                 <img src="img/photo_2025-03-09_16-51-27.jpg" alt="Product 3">
+                <h3>Shirt OverSize</h3>
                 <p>$9.99</p>
-                <a href="#" class="btn">Add to Cart</a>
+                <a href="https://t.me/tuntola" class="btn">Contact Me</a>
             </div>
             <div class="product">
-                <img src="img/4.jpg" alt="Product 4">
-                <h3>Shirt</h3>
+                <img src="img/photo_2025-03-09_16-51-25.jpg" alt="Product 4">
+                <h3>Shirt OverSize</h3>
                 <p>$9.99</p>
-                <a href="#" class="btn">Add to Cart</a>
+                <a href="https://t.me/tuntola" class="btn">Contact Me</a>
             </div>
         </div>
     </div>
