--- a/index.html
+++ b/index.html
@@ -1,59 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Man Store </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Man Store</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <section class="hero">
-        <div class="container">
-            <h2>The Man Store</h2>
-            <p>Explore our latest collection of high-quality clothing.</p>
-            <a href="Product1.html" class="btn">Shop Now</a>
+      <h1>The Man Store</h1>
+      <p>Welcome To The Man Store.</p>
+      <p>
+        មានលក់អាវ freesize 40-75kgតម្លៃល្អ.
+      </p>
+      <form>
+        <button>
+          <div class="container"></div>
+          More Shop
+          <img src="./arrow.svg" alt="arrow button" />
+          <a href="Product1.html" class="btn">Clik Here</a>
+        </button>
         </div>
+        <a>
+      </form>
     </section>
-
-    <section class="products">
-        <div class="container">
-            <h2>Best Seller</h2>
-            <div class="product-grid">
-                <div class="product">
-                    <img src="img/product1.jpg" alt="Product 1">
-                    <h3>Shirt</h3>
-                    <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-                <div class="product">
-                    <img src="img/2.jpg" alt="Product 2">
-                    <h3>Shirt</h3>
-                    <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-                <div class="product">
-                     <img src="img/3.jpg" alt="Product 3">
-                    <h3>Shirt</h3>
-                    <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-                <div class="product">
-                    <img src="img/4.jpg" alt="Product 4">
-                    <h3>Shirt</h3>
-                    <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-
-    <footer>
-        <div class="container">
-            <p>&copy; Facebook Page The Man Store.</p>
-        </div>
-    </footer>
-</body>
+  </body>
 </html>
