--- a/Product1.html
+++ b/Product1.html
@@ -1,5 +1,5 @@
 <title>The Man Store </title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style 2.css">
 <header>
     <div class="container">
         <div class="logo">
@@ -7,7 +7,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index 2.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="https://t.me/tuntola">Contact</a></li>
             </ul>
