--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="container"></div>
           More Shop
           <img src="./arrow.svg" alt="arrow button" />
-          <a href="Product1.html" class="btn">Clik Here</a>
+          <a href="index 2.html" class="btn">Clik Here</a>
         </button>
         </div>
         <a>
