--- a/index 2.html
+++ b/index 2.html
@@ -25,25 +25,25 @@
                     <img src="img/product1.jpg" alt="Product 1">
                     <h3>Shirt</h3>
                     <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
                 </div>
                 <div class="product">
                     <img src="img/2.jpg" alt="Product 2">
                     <h3>Shirt</h3>
                     <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
                 </div>
                 <div class="product">
                      <img src="img/3.jpg" alt="Product 3">
                     <h3>Shirt</h3>
                     <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
                 </div>
                 <div class="product">
                     <img src="img/4.jpg" alt="Product 4">
                     <h3>Shirt</h3>
                     <p>$9.99</p>
-                    <a href="#" class="btn">Add to Cart</a>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
                 </div>
             </div>
         </div>
