--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <h1>Welcome to The Man Store</h1>
                 <p>We provide high-quality services to our clients.</p>
-                <a href="index.html" class="btn">Home</a>
+                <a href="index 2.html" class="btn">Home</a>
             </div>
         </section>
 
