--- a/Product1.html
+++ b/Product1.html
@@ -1,5 +1,5 @@
 <title>The Man Store </title>
-<link rel="stylesheet" href="style 2.css">
+<link rel="stylesheet" href="Global Styles.css">
 <header>
     <div class="container">
         <div class="logo">
