--- a/index 2.html
+++ b/index 2.html
@@ -45,6 +45,36 @@
                     <p>$9.99</p>
                     <a href="https://t.me/tuntola" class="btn">Contact Me</a>
                 </div>
+                <div class="product">
+                    <img src="img/best.jpg" alt="Product 4">
+                    <h3>Shirt</h3>
+                    <p>$9.99</p>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
+                </div>
+                <div class="product">
+                    <img src="img/best2.jpg" alt="Product 4">
+                    <h3>Shirt</h3>
+                    <p>$9.99</p>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
+                </div>
+                <div class="product">
+                    <img src="img/best3.jpg" alt="Product 4">
+                    <h3>Shirt</h3>
+                    <p>$9.99</p>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
+                </div>
+                <div class="product">
+                    <img src="img/best4.jpg" alt="Product 4">
+                    <h3>Shirt</h3>
+                    <p>$9.99</p>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
+                </div>
+                <div class="product">
+                    <img src="img/best5.jpg" alt="Product 4">
+                    <h3>Shirt</h3>
+                    <p>$9.99</p>
+                    <a href="https://t.me/tuntola" class="btn">Contact Me</a>
+                </div>
             </div>
         </div>
     </section>
