--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
                 <div class="service-grid">
                     <article class="service">
                         <h3>ទាក់ទងពួកយើងតាមរយះ Facebook Page</h3>
-                        <a href="#" class="btn">Facebook Page</a>
+                        <a href="https://web.facebook.com/profile.php?id=100088518528010" class="btn">Facebook Page</a>
                     </article>
                     <article class="service">
                         <h3>ទាក់ទងពួកយើងតាមរយះTelegram</h3>
-                        <a href="#" class="btn">Telegram</a>
+                        <a href="https://t.me/tuntola" class="btn">Telegram</a>
                     </article>
                 </div>
             </div>
